# ANTARA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  antara_generator.py
Dialects/: common.h
cmake/: antara-config.cmake  antara-targets.cmake
core/: Antara.cpp  CMakeLists.txt  antara-cli.cpp  antara_base.h  antara_queue.h  antara_serial.cpp  antara_serial.h  antara_serialization.cpp  antara_serialization.h  antara_tcp.cpp  antara_tcp.h  antara_types.h  antara_udp.cpp  antara_udp.h  base64.cpp  base64.h  crc32.cpp  crc32.h  deserialization.cpp  deserialization.h  serialization.cpp  serialization.h  sha256.h
core/antara-cli/: CMakeLists.txt  antara-cli.cpp
core/include/ANTARA/: Antara.h  Core  Queue  Serial  TCP  UDP  antara_types.h  antara_version.h
tests/: CMakeLists.txt  dialect_test.xml  test.cpp
tests/gcs/: CMakeLists.txt
tests/vehicle/: CMakeLists.txt
